# predictify-contracts

./: .gitignore  API_DOCUMENTATION.md  ARCHIVE_BOUNDS_IMPLEMENTATION.md  AUDIT_SYSTEM_TECHNICAL_SUMMARY.md  App.tsx  CIRCUIT_BREAKER_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DELIVERABLES_SUMMARY.md  ERROR_HANDLING_ANALYSIS.md  ERROR_PATH_MAPPING_FIXES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  METADATA_LIMITS_PR.md  PR_DASHBOARD_STATISTICS.md  PR_MESSAGE.md  PR_STORAGE_KEY_AUDIT.md  README.md  STORAGE_KEY_AUDIT_SUMMARY.md  TASK_558_TESTING_STRATEGY.md  VERIFICATION_REPORT.md  app.json  braces_close.txt  braces_open.txt  check_braces.py  feature_twap-cache_pr.md  package-lock.json  package.json  pr_body.md  tailwind.config.js  tsconfig.json  update_claimed.py  utils.rs  utils_tests.rs  wrapper.rs
contracts/predictify-hybrid/: BATCH_BET_TEST_COVERAGE.md  Cargo.toml  DASHBOARD_STATISTICS_IMPLEMENTATION.md  DASHBOARD_STATISTICS_QUICK_REFERENCE.md  DASHBOARD_STATISTICS_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  METADATA_LIMITS.md  METADATA_LIMITS_QUICK_REFERENCE.md  Makefile  ORACLE_STALENESS_CONFIDENCE_FEATURE.md  PAYOUT_SPECIFICATION.md  README.md  ci_status.sh  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  validate_tests.sh
contracts/predictify-hybrid/proptest-regressions/: property_based_tests.txt
contracts/predictify-hybrid/src/: admin.rs  admin_auth_audit_tests.rs  analytics.rs  audit.rs  audit_trail.rs  balance_tests.rs  balances.rs  batch_operations.rs  batch_operations_tests.rs  bet_cancellation_tests.rs  bet_tests.rs  bets.rs  capabilities.rs  category_tags_tests.rs  circuit_breaker.rs  circuit_breaker_tests.rs  claim_idempotency_tests.rs  config.rs  contract_errors.rs  custom_token_tests.rs  dispute_multisig.rs  disputes.rs  edge_cases.rs  err.rs  error_code_tests.rs  errors.rs  errors_simple.rs  events.rs  (+77 more)
(+88 files in other folders)
