[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "25.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# CI build profile: faster compile, lower peak memory.
# codegen-units > 1 and lto = false avoid the OOM that kills macos/linux
# runners when compiling ark-std / stellar-xdr with full LTO.
# The resulting wasm is slightly larger but functionally identical.
[profile.ci-release]
inherits = "release"
codegen-units = 4
lto = "thin"
opt-level = 1
