[package]
name = "predictify-hybrid"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "0.4.5"
wee_alloc = "0.4.5"
hex = "0.4"


[dev-dependencies]
soroban-sdk = { version = "0.4.5", features = ["testutils"] }
proptest = "1.4"
