[package]
name = "predictify-hybrid"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
wee_alloc = "0.4.5"


# Disabled: pre-existing SDK incompatibilities
# [[test]]
# name = "datakey_collision"
# path = "tests/datakey_collision.rs"
#
# [[test]]
# name = "oracle_callback_fuzz"
# path = "tests/oracle_callback_fuzz.rs"

[[test]]
name = "err_stability"
path = "tests/err_stability.rs"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"
